packages/ogg_opus_player/lib/ogg_opus_player_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for `src/ogg_opus_player.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class OggOpusPlayerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OggOpusPlayerBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OggOpusPlayerBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Void> ogg_opus_player_create(
    ffi.Pointer<ffi.Int8> file_path,
  ) {
    return _ogg_opus_player_create(
      file_path,
    );
  }

  late final _ogg_opus_player_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Int8>)>>('ogg_opus_player_create');
  late final _ogg_opus_player_create = _ogg_opus_player_createPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Int8>)>();

  void ogg_opus_player_pause(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _ogg_opus_player_pause(
      player,
    );
  }

  late final _ogg_opus_player_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ogg_opus_player_pause');
  late final _ogg_opus_player_pause = _ogg_opus_player_pausePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ogg_opus_player_play(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _ogg_opus_player_play(
      player,
    );
  }

  late final _ogg_opus_player_playPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ogg_opus_player_play');
  late final _ogg_opus_player_play = _ogg_opus_player_playPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ogg_opus_player_dispose(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _ogg_opus_player_dispose(
      player,
    );
  }

  late final _ogg_opus_player_disposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ogg_opus_player_dispose');
  late final _ogg_opus_player_dispose = _ogg_opus_player_disposePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  double ogg_opus_player_get_current_time(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _ogg_opus_player_get_current_time(
      player,
    );
  }

  late final _ogg_opus_player_get_current_timePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>)>>(
          'ogg_opus_player_get_current_time');
  late final _ogg_opus_player_get_current_time =
      _ogg_opus_player_get_current_timePtr
          .asFunction<double Function(ffi.Pointer<ffi.Void>)>();
}
